--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
           node-version: 14
 
       - run: npm install
-      - run: npm run build
+      # - run: npm run build
 
       # https://github.com/marketplace/actions/npm-publish
       # TODO: set access to public
