--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@allmaps/layers",
-  "version": "1.0.0-alpha.7",
+  "version": "1.0.0-alpha.8",
   "author": {
     "name": "Bert Spaan",
     "email": "hello@bertspaan.nl",
     "url": "https://bertspaan.nl"
   },
   "description": "OpenLayers Layers for IIIF-based georeferencing and warping",
-  "main": "dist/layers.cjs.js",
-  "jsdelivr": "dist/layers.umd.min.js",
-  "unpkg": "dist/layers.umd.min.js",
-  "module": "src/index.js",
+  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "unpkg": "dist/allmaps-layers.min.js",
+  "jsdelivr": "dist/allmaps-layers.min.js",
   "files": [
     "dist"
   ],
@@ -26,23 +27,23 @@
   ],
   "scripts": {
     "bundle": "rm -rf dist && rollup -c",
-    "watch": "rollup -c -w"
-  },
-  "_moduleAliases": {
-    "@allmaps/layers": "./src/index.js"
+    "watch": "rollup -c -w",
+    "test": "mocha"
   },
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "ol": "^6.5.0",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-babel": "^5.2.2",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
-    "module-alias": "^2.2.2",
     "rollup": "^2.38.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2"
   },
   "engines": {
     "node": ">=12"
@@ -51,7 +52,7 @@
     "ol": "^6.5.0"
   },
   "dependencies": {
-    "@allmaps/transform": "^1.0.0-alpha.3",
+    "@allmaps/transform": "^1.0.0-alpha.5",
     "d3-geo": "^2.0.1",
     "d3-tile": "^1.0.0",
     "potpack": "^1.0.1",
