--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@allmaps/layers",
-  "version": "1.0.0-alpha.8",
+  "version": "1.0.0-alpha.9",
   "author": {
     "name": "Bert Spaan",
     "email": "hello@bertspaan.nl",
@@ -8,12 +8,13 @@
   },
   "description": "OpenLayers Layers for IIIF-based georeferencing and warping",
   "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "unpkg": "dist/allmaps-layers.min.js",
-  "jsdelivr": "dist/allmaps-layers.min.js",
+  "module": "index.js",
+  "exports": {
+    "import": "./index.js"
+  },
   "files": [
-    "dist"
+    "index.js",
+    "src"
   ],
   "repository": {
     "type": "git",
@@ -21,38 +22,26 @@
   },
   "homepage": "https://allmaps.org",
   "keywords": [
+    "allmaps",
     "georeference",
     "openlayers",
     "map"
   ],
   "scripts": {
-    "bundle": "rm -rf dist && rollup -c",
-    "watch": "rollup -c -w",
     "test": "mocha"
   },
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "ol": "^6.5.0",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "rollup": "^2.38.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
     "chai": "^4.3.4",
     "mocha": "^8.3.2"
   },
   "engines": {
-    "node": ">=12"
-  },
-  "peerDependencies": {
-    "ol": "^6.5.0"
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
   },
   "dependencies": {
     "@allmaps/transform": "^1.0.0-alpha.5",
+    "ol": "^6.5.0",
     "d3-geo": "^2.0.1",
     "d3-tile": "^1.0.0",
     "potpack": "^1.0.1",
