--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@allmaps/layers",
-  "version": "1.0.0-alpha.12",
+  "version": "1.0.0-alpha.13",
   "author": {
     "name": "Bert Spaan",
     "email": "hello@bertspaan.nl",
@@ -27,24 +27,25 @@
     "openlayers",
     "map"
   ],
-  "scripts": {
-    "test": "mocha"
-  },
-  "license": "GPL-3.0-or-later",
-  "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^8.3.2"
-  },
-  "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
-  },
   "dependencies": {
-    "@allmaps/transform": "^1.0.0-alpha.5",
+    "@allmaps/transform": "^1.0.0-alpha.6",
     "d3-geo": "^2.0.1",
     "d3-tile": "^1.0.0",
     "ol": "^6.5.0",
     "potpack": "^1.0.1",
     "ramda": "^0.27.1",
     "regl": "2.0.1"
+  },
+  "scripts": {
+    "test": "mocha && eslint src test"
+  },
+  "license": "GPL-3.0-or-later",
+  "devDependencies": {
+    "eslint": "7",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2"
+  },
+  "engines": {
+    "node": "^14.13.1 || >=16.0.0"
   }
 }
